updated config file to be in one, updated python script that processes data, server now publically available